lang.java.statics.test/tests/positive/classes/nested/inner-class-instantiation-requires-qualified-new.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    public class A {
        public class B {}
    }

}

[T]
import p.A.B;
public class T {
    public p.A a = new p.A();
    public B b = a.new B();
}
